--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -1,5 +1,6 @@
 
 name: CodeQL
+
 on:
   push:
     branches:
@@ -7,19 +8,34 @@ on:
   pull_request:
     branches:
       - master
-  schedule:
-    - cron: '0 0 * * 0' # Ejecución semanal (opcional)
+  workflow_dispatch:
+
+permissions:
+  contents: read
+  security-events: write
+
 jobs:
   analyze:
     name: Analyze
     runs-on: ubuntu-latest
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v3
+
+      - name: Set up .NET
+        uses: actions/setup-dotnet@v3
+        with:
+          dotnet-version: '6.0.x'
+
+      - name: Restore dependencies
+        run: dotnet restore
+
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v3
         with:
-          languages: 'csharp' # Cambia el lenguaje si no es C#
-          working-directory: 'GuiaUsoLibreria'
+          languages: 'csharp'
+
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v3
+
