--- a/.github/workflows/codeql-analysis.yml
+++ b/.github/workflows/codeql-analysis.yml
@@ -26,15 +26,19 @@ jobs:
       - name: Set up .NET
         uses: actions/setup-dotnet@v3
         with:
-          dotnet-version: '8.0.x'
+          dotnet-version: '6.0.x' # Cambia según la versión de .NET de tu proyecto
 
       - name: Restore dependencies
         run: dotnet restore
+
+      - name: Build project
+        run: dotnet build --no-restore
 
       - name: Initialize CodeQL
         uses: github/codeql-action/init@v3
         with:
           languages: 'csharp'
+          working-directory: 'GuiaUsoLibreria' # Cambia según la ubicación de tu código fuente
 
       - name: Perform CodeQL Analysis
         uses: github/codeql-action/analyze@v3
