--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -19,11 +19,14 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Set up JDK 17  # <--- INSTALAR JAVA 17
+      - name: Set up JDK 17  # <---- CONFIGURA JAVA 17
         uses: actions/setup-java@v3
         with:
           distribution: 'temurin'
           java-version: '17'
+
+      - name: Verify Java Version  # <---- AGREGA UN PASO DE DEPURACIÓN
+        run: java -version
 
       - name: Cache SonarCloud packages
         uses: actions/cache@v3
