--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -19,14 +19,21 @@ jobs:
       - name: Checkout repository
         uses: actions/checkout@v3
 
-      - name: Set up JDK 17  # <---- CONFIGURA JAVA 17
-        uses: actions/setup-java@v3
-        with:
-          distribution: 'temurin'
-          java-version: '17'
+      - name: 🔍 Debug - Print Default Java Version
+        run: |
+          echo "Default JAVA_HOME: $JAVA_HOME"
+          java -version
 
-      - name: Verify Java Version  # <---- AGREGA UN PASO DE DEPURACIÓN
-        run: java -version
+      - name: 🚀 Force Install Java 17
+        run: |
+          sudo apt-get update
+          sudo apt-get install openjdk-17-jdk -y
+          echo "JAVA_HOME=$(dirname $(dirname $(readlink -f $(which java))))" >> $GITHUB_ENV
+
+      - name: ✅ Verify Installed Java Version
+        run: |
+          echo "JAVA_HOME after installation: $JAVA_HOME"
+          java -version
 
       - name: Cache SonarCloud packages
         uses: actions/cache@v3
@@ -35,18 +42,28 @@ jobs:
           key: ${{ runner.os }}-sonar
           restore-keys: ${{ runner.os }}-sonar
 
-      - name: Install SonarCloud scanner
+      - name: 🔍 Debug - Check SonarScanner Java Version
+        run: |
+          echo "SonarScanner Java version:"
+          ~/.sonar/scanner/sonar-scanner-4.7.0.2747-linux/bin/sonar-scanner -version || echo "SonarScanner not found"
+
+      - name: 📥 Install SonarCloud Scanner
         run: |
           mkdir -p ~/.sonar/scanner
           curl -sSLo ~/.sonar/scanner/sonar-scanner-cli.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.7.0.2747-linux.zip
           unzip ~/.sonar/scanner/sonar-scanner-cli.zip -d ~/.sonar/scanner
           echo "$HOME/.sonar/scanner/sonar-scanner-4.7.0.2747-linux/bin" >> $GITHUB_PATH
 
-      - name: Run SonarCloud analysis
+      - name: 🔍 Debug - Verify SonarScanner Path
+        run: which sonar-scanner || echo "SonarScanner not found in path"
+
+      - name: 🚀 Run SonarCloud Analysis
         run: |
+          export JAVA_HOME=$(dirname $(dirname $(readlink -f $(which java))))
           sonar-scanner \
             -Dsonar.projectKey=tu_usuario_tu_repositorio \
             -Dsonar.organization=tu_organizacion_sonarcloud \
             -Dsonar.host.url=https://sonarcloud.io \
             -Dsonar.token=${{ secrets.SONAR_TOKEN }}
+
 
