--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -16,23 +16,35 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout repository
+      - name: 📥 Checkout repository
         uses: actions/checkout@v3
 
       - name: 🔍 Debug - Print Default Java Version
         run: |
-          echo "Default JAVA_HOME: $JAVA_HOME"
-          java -version
+          echo "🔍 Default JAVA_HOME: $JAVA_HOME"
+          java -version || echo "❌ Java no encontrado"
 
       - name: 🚀 Force Install Java 17
         run: |
           sudo apt-get update
           sudo apt-get install openjdk-17-jdk -y
-          echo "JAVA_HOME=$(dirname $(dirname $(readlink -f $(which java))))" >> $GITHUB_ENV
+          echo "✅ Java 17 instalado"
 
       - name: ✅ Verify Installed Java Version
         run: |
-          echo "JAVA_HOME after installation: $JAVA_HOME"
+          echo "🔍 JAVA_HOME después de la instalación: $JAVA_HOME"
+          java -version
+
+      - name: 🔥 Set JAVA_HOME to Java 17
+        run: |
+          echo "🔧 Configurando JAVA_HOME..."
+          echo "JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64" >> $GITHUB_ENV
+          export JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64
+          echo "✅ JAVA_HOME configurado correctamente"
+
+      - name: 🚀 Verify JAVA_HOME Again
+        run: |
+          echo "🔍 JAVA_HOME Final: $JAVA_HOME"
           java -version
 
       - name: Cache SonarCloud packages
@@ -42,28 +54,26 @@ jobs:
           key: ${{ runner.os }}-sonar
           restore-keys: ${{ runner.os }}-sonar
 
-      - name: 🔍 Debug - Check SonarScanner Java Version
-        run: |
-          echo "SonarScanner Java version:"
-          ~/.sonar/scanner/sonar-scanner-4.7.0.2747-linux/bin/sonar-scanner -version || echo "SonarScanner not found"
-
       - name: 📥 Install SonarCloud Scanner
         run: |
           mkdir -p ~/.sonar/scanner
           curl -sSLo ~/.sonar/scanner/sonar-scanner-cli.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.7.0.2747-linux.zip
           unzip ~/.sonar/scanner/sonar-scanner-cli.zip -d ~/.sonar/scanner
           echo "$HOME/.sonar/scanner/sonar-scanner-4.7.0.2747-linux/bin" >> $GITHUB_PATH
+          echo "✅ SonarCloud Scanner instalado"
 
-      - name: 🔍 Debug - Verify SonarScanner Path
-        run: which sonar-scanner || echo "SonarScanner not found in path"
+      - name: 🔍 Verify SonarScanner Java Version
+        run: |
+          echo "🔍 SonarScanner Java Version:"
+          ~/.sonar/scanner/sonar-scanner-4.7.0.2747-linux/bin/sonar-scanner -version || echo "❌ SonarScanner no encontrado"
 
       - name: 🚀 Run SonarCloud Analysis
         run: |
-          export JAVA_HOME=$(dirname $(dirname $(readlink -f $(which java))))
+          echo "🔧 Usando JAVA_HOME: $JAVA_HOME"
+          export JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64
           sonar-scanner \
             -Dsonar.projectKey=tu_usuario_tu_repositorio \
             -Dsonar.organization=tu_organizacion_sonarcloud \
             -Dsonar.host.url=https://sonarcloud.io \
             -Dsonar.token=${{ secrets.SONAR_TOKEN }}
-
 
