--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -24,22 +24,22 @@ jobs:
           echo "🔍 Default JAVA_HOME: $JAVA_HOME"
           java -version || echo "❌ Java no encontrado"
 
-      - name: 🚀 Force Install Java 17
-        run: |
-          sudo apt-get update
-          sudo apt-get install openjdk-17-jdk -y
-          echo "✅ Java 17 instalado"
+      - name: 🚀 Install Java 21 (Temurin)
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '21'
 
       - name: ✅ Verify Installed Java Version
         run: |
           echo "🔍 JAVA_HOME después de la instalación: $JAVA_HOME"
           java -version
 
-      - name: 🔥 Set JAVA_HOME to Java 17
+      - name: 🔥 Set JAVA_HOME to Java 21
         run: |
           echo "🔧 Configurando JAVA_HOME..."
-          echo "JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64" >> $GITHUB_ENV
-          export JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64
+          echo "JAVA_HOME=$(dirname $(dirname $(readlink -f $(which java))))" >> $GITHUB_ENV
+          export JAVA_HOME=$(dirname $(dirname $(readlink -f $(which java))))
           echo "✅ JAVA_HOME configurado correctamente"
 
       - name: 🚀 Verify JAVA_HOME Again
@@ -57,20 +57,20 @@ jobs:
       - name: 📥 Install SonarCloud Scanner
         run: |
           mkdir -p ~/.sonar/scanner
-          curl -sSLo ~/.sonar/scanner/sonar-scanner-cli.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-4.7.0.2747-linux.zip
+          curl -sSLo ~/.sonar/scanner/sonar-scanner-cli.zip https://binaries.sonarsource.com/Distribution/sonar-scanner-cli/sonar-scanner-cli-5.0.1.3006-linux.zip
           unzip ~/.sonar/scanner/sonar-scanner-cli.zip -d ~/.sonar/scanner
-          echo "$HOME/.sonar/scanner/sonar-scanner-4.7.0.2747-linux/bin" >> $GITHUB_PATH
+          echo "$HOME/.sonar/scanner/sonar-scanner-5.0.1.3006-linux/bin" >> $GITHUB_PATH
           echo "✅ SonarCloud Scanner instalado"
 
       - name: 🔍 Verify SonarScanner Java Version
         run: |
           echo "🔍 SonarScanner Java Version:"
-          ~/.sonar/scanner/sonar-scanner-4.7.0.2747-linux/bin/sonar-scanner -version || echo "❌ SonarScanner no encontrado"
+          ~/.sonar/scanner/sonar-scanner-5.0.1.3006-linux/bin/sonar-scanner -version || echo "❌ SonarScanner no encontrado"
 
       - name: 🚀 Run SonarCloud Analysis
         run: |
           echo "🔧 Usando JAVA_HOME: $JAVA_HOME"
-          export JAVA_HOME=/usr/lib/jvm/java-17-openjdk-amd64
+          export JAVA_HOME=$(dirname $(dirname $(readlink -f $(which java))))
           sonar-scanner \
             -Dsonar.projectKey=tu_usuario_tu_repositorio \
             -Dsonar.organization=tu_organizacion_sonarcloud \
