--- a/.github/workflows/sonarcloud.yml
+++ b/.github/workflows/sonarcloud.yml
@@ -72,8 +72,8 @@ jobs:
           echo "🔧 Usando JAVA_HOME: $JAVA_HOME"
           export JAVA_HOME=$(dirname $(dirname $(readlink -f $(which java))))
           sonar-scanner \
-            -Dsonar.projectKey=${llaveProyecto} \
-            -Dsonar.organization=${organizacion} \
+            -Dsonar.projectKey=viviana222601_GuiaUsoLibreria \
+            -Dsonar.organization=viviana222601 \
             -Dsonar.host.url=https://sonarcloud.io \
             -Dsonar.token=${{ secrets.SONAR_TOKEN }}
 
